--- a/README.html
+++ b/README.html
@@ -354,9 +354,8 @@ display: none;
 
 <div id="meadow" class="section level1">
 <h1>meadow</h1>
-<p><u><strong>M</strong></u><strong>icroarray <u>E</u>xpression
-<u>A</u>nalysis &amp; <u>D</u>ata <u>O</u>rganization
-<u>W</u>orkflow</strong></p>
+<p><strong><u>M</u>icroarray<u> E</u>xpression <u>A</u>nalysis &amp;
+<u>D</u>ata <u>O</u>rganization <u>W</u>orkflow</strong></p>
 <hr />
 <div id="phase-1-environment-project-scaffolding" class="section level3">
 <h3>Phase 1: Environment &amp; Project Scaffolding</h3>
